fix: prevent tab shifts when selecting
The tabs grew in size ever so slightly, because selected tab labels were bold.
Making them bold didn't add much, so just skip making them bold.

--- a/www/styles.css
+++ b/www/styles.css
@@ -136,7 +136,6 @@ textarea {
 .result-schemas > input:nth-child(3):checked ~ .result-schemas__tabs > label:last-child {
     background-color: #313131;
     color: white;
-    font-weight: 500;
 }
 
 .result-schemas pre {
